# inf-loops-sachacks

./: README.md  requirements.txt
ai_powered_startup_validator_team_automation/: pyproject.toml  setup.py
ai_powered_startup_validator_team_automation/src/ai_powered_startup_validator_team_automation/: crew.py  main.py
ai_powered_startup_validator_team_automation/src/ai_powered_startup_validator_team_automation/config/: agents.yaml  tasks.yaml
backend/: README.md
backend/db/fa3c611a-31c0-49be-bf12-6f53fa66b8cc/: index_metadata.pickle
backend/src/ai_powered_startup_validator_team_automation/: app.py  crew.py
backend/src/ai_powered_startup_validator_team_automation/api/: routes.py
backend/src/ai_powered_startup_validator_team_automation/config/: tasks.yaml
backend/src/ai_powered_startup_validator_team_automation/tools/: custom_tool.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  TextInput.tsx  features.tsx  footer.tsx  hero-section.tsx  pricing-section.tsx  robo-assistant.tsx  testimonials.tsx  text-input.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx
