[project]
name = "ai_powered_startup_validator_team_automation"
version = "0.1.0"
description = "ai_powered_startup_validator_team_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
ai_powered_startup_validator_team_automation = "ai_powered_startup_validator_team_automation.main:run"
run_crew = "ai_powered_startup_validator_team_automation.main:run"
train = "ai_powered_startup_validator_team_automation.main:train"
replay = "ai_powered_startup_validator_team_automation.main:replay"
test = "ai_powered_startup_validator_team_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
